fix typos in messages

--- a/po/es.po
+++ b/po/es.po
@@ -697,7 +697,7 @@ msgstr "&Expandir caracteres de escape"
 #: ../kmuddy/dialogs/dlgappsettings.cpp:418
 msgid ""
 "This will enable backslash expansion, that is: \\n is end-of-line, \\t is "
-"TAB, \\\\ is \\, \\<anythisg else> means<anything else>."
+"TAB, \\\\ is \\, \\<anything else> means <anything else>."
 msgstr ""
 "Permite la expansión de caracteres de escape; esto es: \\n indica fin-de-"
 "línea, \\t es TAB, \\\\ es \\, \\<algo> significa <algo>."
@@ -892,7 +892,7 @@ msgstr "&Comando"
 #: ../kmuddy/dialogs/dlgeditaction.cpp:61
 msgid ""
 "Command that will be executed if you click on the button. Note that you can "
-"enter multiple commands here (separated by semi-colons, or another characted "
+"enter multiple commands here (separated by semi-colons, or another character "
 "defined in <b>global settings</b>)."
 msgstr ""
 "Comando a ejecutar cuando se presione el botón. Observa que puedes "
@@ -2035,7 +2035,7 @@ msgstr "&Añadir automáticamente nuevas líneas tras el indicador"
 
 #: ../kmuddy/dialogs/dlgprofilesettings.cpp:73
 msgid ""
-"Enables adding linefeeds afer GA-terminated prompts to have properly aligned "
+"Enables adding linefeeds after GA-terminated prompts to have properly aligned "
 "output."
 msgstr ""
 "Permite añadir retornos de línea tras indicadores terminados en señales GA (Go-Ahead) "
@@ -2152,7 +2152,7 @@ msgstr "&Permitir sonidos para este perfil"
 #: ../kmuddy/dialogs/dlgprofilesettings.cpp:181
 msgid ""
 "Enable playing sounds with this profile.\n"
-"Note that this will only wirk if you enable sounds in global preferences.\n"
+"Note that this will only work if you enable sounds in global preferences.\n"
 "Also note that this will only work if your MUD supports <b>MSP</b> (MUD "
 "Sound Protocol)."
 msgstr ""
