--- a/po/kmuddy.pot
+++ b/po/kmuddy.pot
@@ -621,7 +621,7 @@ msgstr ""
 #: ../kmuddy/dialogs/dlgappsettings.cpp:418
 msgid ""
 "This will enable backslash expansion, that is: \\n is end-of-line, \\t is "
-"TAB, \\\\ is \\, \\<anythisg else> means<anything else>."
+"TAB, \\\\ is \\, \\<anything else> means <anything else>."
 msgstr ""
 
 #: ../kmuddy/dialogs/dlgappsettings.cpp:422
@@ -794,7 +794,7 @@ msgstr ""
 #: ../kmuddy/dialogs/dlgeditaction.cpp:61
 msgid ""
 "Command that will be executed if you click on the button. Note that you can "
-"enter multiple commands here (separated by semi-colons, or another characted "
+"enter multiple commands here (separated by semi-colons, or another character "
 "defined in <b>global settings</b>)."
 msgstr ""
 
@@ -1813,7 +1813,7 @@ msgstr ""
 
 #: ../kmuddy/dialogs/dlgprofilesettings.cpp:73
 msgid ""
-"Enables adding linefeeds afer GA-terminated prompts to have properly aligned "
+"Enables adding linefeeds after GA-terminated prompts to have properly aligned "
 "output."
 msgstr ""
 
@@ -1923,7 +1923,7 @@ msgstr ""
 #: ../kmuddy/dialogs/dlgprofilesettings.cpp:181
 msgid ""
 "Enable playing sounds with this profile.\n"
-"Note that this will only wirk if you enable sounds in global preferences.\n"
+"Note that this will only work if you enable sounds in global preferences.\n"
 "Also note that this will only work if your MUD supports <b>MSP</b> (MUD "
 "Sound Protocol)."
 msgstr ""
