Alter default colors. Properly load maps on connect.

--- a/TODO
+++ b/TODO
@@ -101,6 +101,6 @@ Notation:
 - add "Paste as trigger" somewhere (16.3.2007 by Chaosone)
 - timers with float value timeouts
 - ability to add comments to objects
--256color support (1025)
+- 256color support (1025)
 
 
