--- a/kmuddy.1
+++ b/kmuddy.1
@@ -1,12 +1,12 @@
 .TH KMuddy 1 "3 January 2009" "Version 1.0" "KMuddy Manual Pages"
 .SH NAME
-KMuddy \- a feature-rich MUD client for KDE
+KMuddy \- a feature-rich MUD client by KDE
 .SH SYNOPSIS
 .B kmuddy
 [\-\-help] [--help-qt] [--help-kde] [--help-all] [--author]
 [-v,--version] [--license] [--]
 .SH DESCRIPTION
-\fIKMuddy\fP is a feature-rich MUD(Multi-User Dungeon) client for KDE.
+\fIKMuddy\fP is a feature-rich MUD(Multi-User Dungeon) client by KDE.
 
 Currently supported features include ANSI color, tabbed connection 
 window, MCCP v1/v2 compression, configurable colors and short-cuts, 
