--- a/libmxp/ChangeLog
+++ b/libmxp/ChangeLog
@@ -1,6 +1,11 @@
 ChangeLog for libMXP
 --------------------
 
+*** RELEASED THIS AS VERSION 0.2.5 ***
+
+2020-06-06
+* Fixed entity expansion in custom tags, shouldn't be quoted
+
 *** RELEASED THIS AS VERSION 0.2.4 ***
 
 2009-11-28
